--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@module-federation/nextjs-mf": "^8.1.7",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-fontawesome": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^20",
