--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "resolutions": {
+    "webpack": "5.90.0"
+  },
   "dependencies": {
     "@module-federation/nextjs-mf": "^8.1.7",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-fontawesome": "^1.7.1"
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
+    "webpack": "^5.90.0"
   },
   "devDependencies": {
     "@types/node": "^20",
