--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Build React App
         run: npm install && npm run build
       - name: Deploy app build to S3 bucket
-        run: aws s3 sync ./build/ s3://${{ secrets.S3_BUCKET }} --delete
+        run: aws s3 sync ./out/ s3://${{ secrets.S3_BUCKET }} --delete
